crear factura y visualizar
